Moved section into a subsection

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -264,36 +264,7 @@
 %    \end{table}
 %
 %  \subsection{El caràcter "<ela geminada">}\label{sec:elageminada}
-% 
-%
-%  \section{El mode matemàtic}
-%  Per defecte, el paquet \babelcat{} defineix les versions accentuades dels operadors matemàtics
-%  llistats a la taula \ref{tbl:operadors}. Atès, però, que les normes d'estil de l'IEC recomanen
-%  d'emprar les versions sense accent, el comportament descrit es pot desactivar i tornar a activar 
-%  amb les ordres \verb.\unaccentedoperators. i \verb.\accentedoperators., respectivament.
-%  \begin{table}[ht]
-%    \centering
-%    \caption{Operadors matemàtics redefinits pel paquet \babelcat}
-%    \label{tbl:operadors}
-%    \smallskip
-%    \begin{tabular}{ccc}
-%      \toprule
-%        Operador  & versió per defecte & versió amb \verb.\unaccentedoperators. \\
-%      \midrule
-%        \verb.\mod. & $\mod$ & $\unaccentedoperators \mod$ \\
-%        \verb.\pmod. & $\pmod$ & $\unaccentedoperators \pmod$ \\
-%        \verb.\bmod. & $\bmod$ & $\unaccentedoperators \bmod$ \\
-%        \verb.\lim. & $\lim$ & $\unaccentedoperators \lim$ \\
-%        \verb.\liminf. & $\liminf$ & $\unaccentedoperators \liminf$ \\
-%        \verb.\limsup. & $\limsup$ & $\unaccentedoperators \limsup$ \\
-%        \verb.\max. & $\max$ & $\unaccentedoperators \max$ \\
-%        \verb.\min. & $\min$ & $\unaccentedoperators \min$ \\
-%        \verb.\inf. & $\inf$ & $\unaccentedoperators \inf$ \\
-%      \bottomrule
-%    \end{tabular}
-%  \end{table}
-%
-%     
+%  TODO: Manca escriure aquesta secció.
 %     
 %  \section{Traduccions}
 %
@@ -342,7 +313,38 @@
 %      \bottomrule
 %      \end{tabular}
 %    \end{table}
+%
+%
+%  \subsection{Catalanitzacions en mode matemàtic}
+%    Per defecte, el paquet \babelcat{} defineix les versions accentuades dels operadors matemàtics
+%    llistats a la taula \ref{tbl:operadors}. Atès, però, que les normes d'estil de l'IEC recomanen
+%    d'emprar les versions sense accent, el comportament descrit es pot desactivar i tornar a activar 
+%    amb les ordres \verb.\unaccentedoperators. i \verb.\accentedoperators., respectivament.
+%    \begin{table}[ht]
+%      \centering
+%      \caption{Operadors matemàtics redefinits pel paquet \babelcat}
+%      \label{tbl:operadors}
+%      \smallskip
+%      \begin{tabular}{ccc}
+%        \toprule
+%          Operador  & versió per defecte & versió amb \verb.\unaccentedoperators. \\
+%        \midrule
+%          \verb.\mod. & $\mod$ & $\unaccentedoperators \mod$ \\
+%          \verb.\pmod. & $\pmod$ & $\unaccentedoperators \pmod$ \\
+%          \verb.\bmod. & $\bmod$ & $\unaccentedoperators \bmod$ \\
+%          \verb.\lim. & $\lim$ & $\unaccentedoperators \lim$ \\
+%          \verb.\liminf. & $\liminf$ & $\unaccentedoperators \liminf$ \\
+%          \verb.\limsup. & $\limsup$ & $\unaccentedoperators \limsup$ \\
+%          \verb.\max. & $\max$ & $\unaccentedoperators \max$ \\
+%          \verb.\min. & $\min$ & $\unaccentedoperators \min$ \\
+%          \verb.\inf. & $\inf$ & $\unaccentedoperators \inf$ \\
+%        \bottomrule
+%      \end{tabular}
+%    \end{table}
+%     
 %   
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %  \clearpage
