Clarificació dels autors/mantenidors

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -79,6 +79,7 @@
 \usepackage{multirow}
 \usepackage{hyperref}
 \hypersetup{
+  unicode=true,
 	colorlinks,
 	linkcolor=blue
 }
@@ -99,14 +100,18 @@
 
 
 \begin{document}
-  \title{Estil \textsf{catalan} per al sistema Babel}
-  \author{Gonçal Badenes \and Miquel Ortega \and Orestes Mas}
+  \title{Estil \textsf{catalan} per al sistema Babel\footnote{Aquest paquet és actualment a la versió 3.0 amb data del primer d'octubre de 2020. La present còpia del manual fou generada el~\today.}}
+  \author{%
+    Miquel Ortega\footnote{Mantenidor principal, 2020 en endavant} \and
+    Orestes Mas\footnote{Mantenidor, 2020 en endavant} \and
+    Gonçal Badenes\footnote{Autor original del paquet i mantenidor en el període 1991--2020}%
+  }
   \date{\today}
   \maketitle
   
   \babelcat{} és un paquet opcional que proporciona suport a l'escriptura en llengua catalana a través del sistema \babel. Està dissenyat per funcionar correctament amb els motors pdf\TeX, \XeTeX{} i Lua\TeX. Suporta els formats \texttt{Plain} i \LaTeX.
   
-  El present document conté la guia d'ús de \babelcat: com s'ha d'emprar, quines \textit{macros} i acceleradors posa a disposició de l'usuari, el codi font del paquet i un històric de canvis. El document ha estat generat a partir del fitxer \file{catalan.dtx}\footnote{Aquest paquet és actualment a la versió 3.0 amb data del primer d'octubre de 2020. La present còpia del manual fou generada el~\today.}.
+  El present document conté la guia d'ús de \babelcat: com s'ha d'emprar, quines \textit{macros} i acceleradors posa a disposició de l'usuari, el codi font del paquet i un històric de canvis. El document ha estat generat a partir del fitxer \file{catalan.dtx}.
   
   \tableofcontents
 
