Tweak page geometry and supressing explicit utf8 in inputenc

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -58,12 +58,12 @@
 %    (jsanchez@gmv.es) The code for the catalan language has been
 %    removed and now is in this file.
 %<*filedriver>
-\documentclass[a4paper,11pt]{ltxdoc}
-\usepackage[left=50mm,right=45mm,top=30mm,bottom=30mm]{geometry}
+\documentclass[a4paper,10pt]{ltxdoc}
+\usepackage[left=45mm,right=40mm,top=30mm,bottom=30mm]{geometry}
 \usepackage[svgnames]{xcolor}
 \usepackage{iftex}
 \ifPDFTeX
-    \usepackage[utf8]{inputenc}
+%     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
     % Fonts
     \usepackage{lmodern}
