--- a/catalan.dtx
+++ b/catalan.dtx
@@ -1109,12 +1109,14 @@
 %    \cs{l} and \cs{L} until begin document to prevent overwriting by
 %    fontenc}
 %    \begin{macrocode}
-\def\cat@l#1#2{\lgem}
-\def\cat@L#1#2{\Lgem}
-\let\cat@lslash\l
-\let\cat@Lslash\L
-\DeclareRobustCommand\l{\@ifnextchar.\cat@l\cat@lslash}
-\DeclareRobustCommand\L{\@ifnextchar.\cat@L\cat@Lslash}
+\AtBeginDocument{%
+  \def\cat@l#1#2{\lgem}
+  \def\cat@L#1#2{\Lgem}
+  \let\cat@lslash\l
+  \let\cat@Lslash\L
+  \DeclareRobustCommand\l{\@ifnextchar.\cat@l\cat@lslash}
+  \DeclareRobustCommand\L{\@ifnextchar.\cat@L\cat@Lslash}
+}
 %
 %
 %DeclareUnicodeCharacter no és acceptat per \inputenc amb l'opció [utf8*x*]
