--- a/catalan.dtx
+++ b/catalan.dtx
@@ -113,7 +113,7 @@
   \author{%
     Miquel Ortega\footnote{Mantenidor principal, 2020 en endavant} \and
     Orestes Mas\footnote{Mantenidor, 2020 en endavant} \and
-    Gonçal Badenes\footnote{Autor original del paquet i mantenidor en el període 1991--2020}%
+    Gonçal Badenes\footnote{Autor original del paquet i mantenidor des de 1991}%
   }
   \date{\today}
   \maketitle
