Erase leftover code

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -1249,14 +1249,13 @@
 %  \end{macro}
 %  \end{macro}
 %
+%    \begin{macrocode}
 \addto\mathcatalan{\cat@operators}
 
 \ifcat@latex\else
   \let\operator@font\rm
 \fi
 %    \end{macrocode}
-%  \end{macro}
-%  \end{macro}
 %
 %    Operators are stored in |\cat@operators|, which is
 %    included in the math group. Since |\operator@font| is
