Updated maintainer email

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -40,7 +40,7 @@
 %
 %% Catalan Language Definition File
 %% Copyright (C) 1991 - 2005
-%%           by Goncal Badenes <badenes (at) imec.be>
+%%           by Gon\c{c}al Badenes <goncal (at) badenes.cat>
 %%              Johannes Braams, TeXniek
 %% Copyright (C) 2020 - 2021
 %%           by Miquel Ortega <miquel (dot) ortega9 (at) gmail (dot) com>
@@ -51,8 +51,8 @@
 %    This file is part of the babel system, it provides the source
 %    code for the Catalan language definition file.
 %    This file was developped out of spanish.sty and suggestions by
-%    Goncal Badenes <badenes at imec.be> and Joerg Knappen
-%    <knappen at vkpmzd.kph.uni-mainz.de>.
+%    Gon\c{c}al Badenes <goncal (at) badenes (dot) cat> and J"org Knappen
+%    <knappen (at) vkpmzd.kph.uni-mainz.de>.
 %
 %    The file spanish.sty was written by Julio Sanchez,
 %    (jsanchez@gmv.es) The code for the catalan language has been
