--- a/catalan.dtx
+++ b/catalan.dtx
@@ -165,12 +165,13 @@
 %
 %    activa el suport al català en un document en anglès, mentre que
 %
-%    |      \usepackage[english,catalan]{babel}|
+%    \verb|      \usepackage[english,catalan]{babel}|
 %
-%    estableix el català com a llengua principal del document.
+%    estableix el català com a llengua principal del document, amb l'anglès com a llengua 
+%    auxiliar.
 %
 %  \section{Introducció de text en català}
-%  \subsection{Caràcters accentuats i símbols -- mètode clàssic (obsolet)}
+%  \subsection{Caràcters accentuats i símbols -- mètode clàssic (actualment obsolet)}
 %    El programa \TeX{} original (1978-1982) reconeixia únicament els caràcters ASCII de 7 bits,
 %    per la qual cosa no era capaç de processar documents que continguessin 
 %    caràcters accentuats i altres símbols. Tanmateix, aquest fet no resultava un problema
